Mysterious fix for broken css

--- a/javascript/src/components/Layout/Header/DesktopNav/styles.module.css
+++ b/javascript/src/components/Layout/Header/DesktopNav/styles.module.css
@@ -1,4 +1,4 @@
-.header {
+.innerHeader {
   flex: 1;
   flex-wrap: wrap;
   /*height: 50px;*/
